# Egg-Image-Generation

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/egg_image_generation/: fetch_dataset.py  fetch_dataset_get_args.py  train.py  train_get_args.py  view.py  view_get_args.py
